some random stuff here and there

--- a/wordle/index.html
+++ b/wordle/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
       <title>Wordle Unlimited</title>
       <meta name="description" content="education">
-	  <link href="./images/NYT-Wordle-Icon-32.png" rel="icon shortcut" sizes="3232" />
+	  <link href="wordle.png" rel="icon shortcut"/>
       <style>
          /* Global Styles & Colors */
          :root {
@@ -101,8 +101,6 @@
          */
          }
       </style>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7330366239032869"
-		crossorigin="anonymous"></script>
    </head>
    <body>
 <script>  
@@ -149,64 +147,5 @@
         border: 1px #e2e2e2 solid;
         }
       </style>
-      <section>
-         <div class="instructions">
-            <h1>Wordle Unlimited</h1>
-            <hr>
-            <p>Guess the hidden word in 6 tries.</p>
-            <p>Each guess must be a valid 5 letter word, you cannot enter random letters. Hit the enter button to submit the guess.</p>
-            <p>After your submission, the color of the tiles will change as in the examples below.</p>
-            <div class="examples">
-               <p><strong>Examples</strong></p>
-               <div class="example">
-                  <div class="row">
-                     <game-tile letter="g" evaluation="correct" reveal=""></game-tile>
-                     <game-tile letter="a"></game-tile>
-                     <game-tile letter="m"></game-tile>
-                     <game-tile letter="e"></game-tile>
-                     <game-tile letter="s"></game-tile>
-                  </div>
-                  <p>The letter <strong>G</strong> is in the word and in the correct spot.</p>
-               </div>
-               <div class="example">
-                  <div class="row">
-                     <game-tile letter="h"></game-tile>
-                     <game-tile letter="o" evaluation="present" reveal=""></game-tile>
-                     <game-tile letter="t"></game-tile>
-                     <game-tile letter="e"></game-tile>
-                     <game-tile letter="l"></game-tile>
-                  </div>
-                  <p>The letter <strong>O</strong> is in the word but in the wrong spot.</p>
-               </div>
-               <div class="example">
-                  <div class="row">
-                     <game-tile letter="m"></game-tile>
-                     <game-tile letter="o"></game-tile>
-                     <game-tile letter="n"></game-tile>
-                     <game-tile letter="e" evaluation="absent" reveal=""></game-tile>
-                     <game-tile letter="y"></game-tile>
-                  </div>
-                  <p>The letter <strong>E</strong> is not in the word in any spot at all.</p>
-               </div>
-            </div>
-            <div class="examples">
-               <h2>Wordle Rules. How to play Wordle.</h2>
-               <p>In wordle you have to guess a 5 letter word, “the hidden word”. 
-                  There are versions of this game in which you have to guess 6 letter words or even 7 letters words, but the most popular is the 5 letter word game. 
-               </p>
-               <p>You have to guess the word in 6 tries. <br>
-                  You begin by typing a word, it has to be a real word found on the dictionary. Once you type in your guess and click Enter your guess is going to be submitted. The background of the letters will change color
-               </p>
-               <ul>
-                  <li>If the letter is in the word and in the right spot, it will turn green.</li>
-                  <li>If the letter is in the word, but not on the right spot, it will turn yellow.</li>
-                  <li>If the letter turns gray, the letter is not in the word at all.</li>
-               </ul>
-               <p>The best strategy is to begin with a word that has many vowels. Some find it helpful to begin with the word IRATE or ARISE. </p>
-               <p>If you want to erase your guess you can click the backspace button. As said, it has to be a real word, one which you can find in a dictionary, otherwise you will get an alert.</p>
-               <p>If you find the correct word, a popup window will appear with your statistics. You can choose to share the results with your friends or have the option to play again.</p>
-            </div>
-         </div>
-      </section>
    </body>
 </html>
