--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
           <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-white u-list-item-5">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
               <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-5" src="images/wordle.png" alt="" data-image-width="200" data-image-height="200">
-              <h4 class="u-align-center u-text u-text-palette-1-base u-text-11">Wordle Unlimited</h4>
-              <p class="u-align-center u-text u-text-palette-1-base u-text-12">Guess the hidden word in 6 tries or less!
+              <h4 class="u-align-center u-text u-text-palette-1-base u-text-11">Wordle</h4>
+              <p class="u-align-center u-text u-text-palette-1-base u-text-12">Guess the hidden word in 6 tries or less! (Unlimited)
               </p>
               <a href="/wordle" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-5">Play</a>
             </div>
