--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </div></header> 
     <section class="u-align-center u-clearfix u-palette-1-dark-1 u-section-1" id="sec-f60b">
       <div class="u-absolute-hcenter u-expanded u-shape u-shape-svg u-text-palette-4-light-1">
-			<div class="fill">
-				<img src="./images/wave.png" alt="" />
-			</div>
+	<div class="fill">
+	    <img src="./images/wave.png" alt="" />
+	</div>
       </div>
       <img class="u-image u-image-1" src="images/dfsfdsf.jpg" data-image-width="1200" data-image-height="900">
       <div class="u-align-left u-container-style u-group u-white u-group-1">
@@ -69,7 +69,7 @@
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
               <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-2" src="images/gameboy.jpg" alt="" data-image-width="1280" data-image-height="720">
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-5">Game Boy Advance</h4>
-              <p class="u-align-center u-text u-text-palette-1-base u-text-6">Play tons of GBA games on your browser!</p>
+              <p class="u-align-center u-text u-text-palette-1-base u-text-6">Play tons of GBA games in your browser!</p>
               <a href="/gba" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-2">Play</a>
             </div>
           </div>
