--- a/gba/invalidgame.html
+++ b/gba/invalidgame.html
@@ -114,7 +114,7 @@
     <div class="center">
     <img src="sadmac.png" alt="Very sad mac D:">
     <p>Uh oh!<br>Invalid Game Request!</p>
-    <button onclick="window.location.href='https://hippole.github.io/gba'">
+    <button onclick="window.location.href='https://hippole.com/gba'">
 		  <span class="shadow"></span>
 		  <span class="edge"></span>
 		  <span class="front text"> Try again </span>
