--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <section class="u-clearfix u-palette-1-base u-section-2" id="sec-84b2">
       <h2 class="u-text u-text-1">Description</h2>
       <div class="u-expanded-width u-palette-4-light-1 u-shape u-shape-rectangle u-shape-1"></div>
-      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/1003784_medium2000.png" alt="">
-      <h3 class="u-text u-text-white u-text-2">you when school (add something more here later)</h3>
+      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/soulStealerGhost.png" alt="">
+      <h3 class="u-text u-text-white u-text-2">very cool skin very good :D</h3>
     </section>
     <section class="u-align-center u-clearfix u-palette-1-base u-section-3" id="carousel_e21f">
       <div class="u-absolute-hcenter u-expanded u-palette-4-light-1 u-shape u-shape-svg u-text-palette-1-base">
