--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/perfectCookie.png" alt="" data-image-width="512" data-image-height="512">
     </section>
     <section class="u-clearfix u-palette-1-base u-section-2" id="sec-84b2">
-      <h2 class="u-text u-text-1">Description</h2>
+      <h2 class="u-text u-text-1">epic skin</h2>
       <div class="u-expanded-width u-palette-4-light-1 u-shape u-shape-rectangle u-shape-1"></div>
       <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/soulStealerGhost.png" alt="">
       <h3 class="u-text u-text-white u-text-2">very cool skin very good :D</h3>
