--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" href="style.css" media="screen">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    
-    
     <link rel="canonical" href="/">
   </head>
   <body class="u-body u-xl-mode"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-palette-1-dark-2 u-header" id="top"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/homstor.gif" alt="" data-image-width="720" data-image-height="720">
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/homstor.gif" alt="" data-image-width="720" data-image-height="720" href="https://github.com/hippole/hippole.com/">
         <h3 class="u-headline u-text u-text-default u-text-1">
           <a href="/">that moment when school</a>
         </h3>
@@ -35,7 +33,7 @@
         </div>
       </div>
       <div class="u-shape u-shape-circle u-white u-shape-2"></div>
-      <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/perfectCookie.png" alt="" data-image-width="512" data-image-height="512">
+      <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/perfectCookie.png" alt="" data-image-width="512" data-image-height="512" href="/cookieclicker">
     </section>
     <section class="u-clearfix u-palette-1-base u-section-2" id="sec-84b2">
       <h2 class="u-text u-text-1">epic skin</h2>
