--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="description" content="education">
+    <meta name="description" content="learning math english social studies world language education">
 
     <title>online educational games</title>
     <link rel="icon" href="./images/icon.png">
