ProTip! Great commit summaries contain fewer than 50 characters. Place extra information in the extended description.
 ProTip! Great commit summaries contain fewer than 50 characters. Place extra information in the extended description.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="u-clearfix u-palette-1-base u-section-2" id="sec-84b2">
       <h2 class="u-text u-text-1">epic skin</h2>
       <div class="u-expanded-width u-palette-4-light-1 u-shape u-shape-rectangle u-shape-1"></div>
-      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/1003784_medium2000.png" alt="don't ask questions">
+      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/youWhenSchool.png" alt="don't ask questions">
       <h3 class="u-text u-text-white u-text-2">education takes place here<br>photo for reference</h3>
     </section>
     <section class="u-align-center u-clearfix u-palette-1-base u-section-3" id="carousel_e21f">
@@ -105,7 +105,7 @@
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-6">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
-              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-6" src="images/questionmark.png" alt="" data-image-width="200" data-image-height="200">
+              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-6" src="images/questionMark.png" alt="" data-image-width="200" data-image-height="200">
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-13">Coming Soon</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-14">Coming Soon<br>What will it be?
               </p>
@@ -118,7 +118,7 @@
         <div class="u-repeater u-repeater-4">
           <div class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-7">
             <div class="u-container-layout u-similar-container u-container-layout-7">
-              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-7" src="images/questionmark.png" alt="" data-image-width="200" data-image-height="200">
+              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-7" src="images/questionMark.png" alt="" data-image-width="200" data-image-height="200">
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-15">Coming Soon</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-16"> Coming Soon<br>What will it be?<br>
               </p>
@@ -128,7 +128,7 @@
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-white u-list-item-8">
             <div class="u-container-layout u-similar-container u-container-layout-8">
-              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-8" src="images/questionmark.png" alt="" data-image-width="200" data-image-height="200">
+              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-8" src="images/questionMark.png" alt="" data-image-width="200" data-image-height="200">
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-17">Coming Soon</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-18"> Coming Soon<br>What will it be?
               </p>
@@ -137,7 +137,7 @@
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-9">
             <div class="u-container-layout u-similar-container u-container-layout-9">
-              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-9" src="images/questionmark.png" alt="" data-image-width="200" data-image-height="200">
+              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-9" src="images/questionMark.png" alt="" data-image-width="200" data-image-height="200">
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-19">Coming Soon</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-20">Coming Soon<br>What will it be?
               </p>
